pre-wrap + some fixes

--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -4,6 +4,7 @@
 }
 
 .post {
+  white-space: pre-wrap;
   padding: 30px;
   margin-bottom: 10px;
   color: inherit;
